# AI_Patents_Research_Agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  simple_log_test.py  test_listeners.py  test_logger.py
docker/: Dockerfile  docker-compose.monitoring.yml  docker-compose.yml
docs/: DOCKER_GUIDE.md  EVALUATION.md  LOGGING.md  PRODUCTION.md  README.md
docs/architecture/: README.md
docs/developer_guide/: README.md
docs/user_guide/: README.md
memory/: long_term.db
memory/entity/: chroma.sqlite3
memory/short_term/: chroma.sqlite3
mlruns/0/: meta.yaml
mlruns/601460168001927721/: meta.yaml
monitoring/: simple_metrics_server.py
monitoring/grafana/dashboards/: comprehensive_agent_task_dashboard.json  evaluation_dashboard.json  patent_agent_dashboard.json  simple_test_dashboard.json
monitoring/metrics/: metrics_persistence.json
monitoring/prometheus/: prometheus.yml
output/: innovation_report.md  patents_data.json  trends_summary.json
scripts/: backup_data.py  generate_test_metrics.py  health_check.py  monitoring.py  restore_metrics.py  save_metrics_on_shutdown.py  setup_local_monitoring.sh  setup_monitoring.sh  start_metrics_server.py  test_advanced_metrics.py  test_metrics_persistence.py  test_metrics_persistence_complete.py  test_workflow_tracker.py  view_logs.py
src/patent_researcher_agent/: chat_ui.py  crew.py  launch_chat.py  main.py
src/patent_researcher_agent/config/: agents.yaml  settings.py  tasks.yaml
src/patent_researcher_agent/core/: __init__.py
tests/: conftest.py
tests/unit/: test_models.py  test_utils.py
(+67 files in other folders)
